--- a/Server Kontrolpanel/Server Kontrolpanel.csproj
+++ b/Server Kontrolpanel/Server Kontrolpanel.csproj
@@ -58,7 +58,15 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Page Include="Edit.xaml">
+    <Page Include="Edit1.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Edit2.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Edit3.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -70,8 +78,14 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Edit.xaml.cs">
-      <DependentUpon>Edit.xaml</DependentUpon>
+    <Compile Include="Edit1.xaml.cs">
+      <DependentUpon>Edit1.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Edit2.xaml.cs">
+      <DependentUpon>Edit2.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Edit3.xaml.cs">
+      <DependentUpon>Edit3.xaml</DependentUpon>
     </Compile>
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
